--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Park Run</title>
+    <title>Love-Running</title>
     <!---Favicon--->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="stylesheet" href="assets/favicon-zip/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <a href="index.html">
+           <h1 id="logo">Love-Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Sign up</a></li>
+            </ul>
+        </nav>
+    </header>
+    <Main>Main Content</Main>
+    <Footer>Footer</Footer>
 </body>
 </html>
