--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
         <a href="index.html">
            <h1 id="logo">Love-Running</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <nav>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <ul id="menu">
+                <li><a href="" class="active">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign up</a></li>
             </ul>
         </nav>
     </header>
-    <Main>Main Content</Main>
-    <Footer>Footer</Footer>
+    <main>Main Content</main>
+    <footer>Footer</footer>
 </body>
 </html>
